# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
config("ntfs_default") {
  cflags = [
    "-Wno-error",
    "-Wno-address-of-packed-member",
    "-D_LARGEFILE_SOURCE",
    "-D_FILE_OFFSET_BITS=64",
    "-DHAVE_CONFIG_H",
  ]

  include_dirs = [
    "../include",
    "../include/fuse-lite",
    "..",
  ]
}

ohos_static_library("libfuse_lite") {
  sources = [
    "fuse.c",
    "fuse_kern_chan.c",
    "fuse_loop.c",
    "fuse_lowlevel.c",
    "fuse_opt.c",
    "fuse_session.c",
    "fuse_signals.c",
    "fusermount.c",
    "helper.c",
    "mount.c",
    "mount_util.c",
  ]
  configs = [ ":ntfs_default" ]
  
  subsystem_name = "storage_manager"
  part_name = "storage_standard"
}