# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
config("ntfs_default") {
  cflags = [
    "-Wno-error",
    "-Wno-address-of-packed-member",
    "-D_LARGEFILE_SOURCE",
    "-D_FILE_OFFSET_BITS=64",
    "-DHAVE_CONFIG_H",
  ]
  include_dirs = [
    "../include",
    "../include/ntfs-3g",
    "..",
  ]
}

ohos_static_library("libntfs_3g") {
  sources = [
    "acls.c",
    "attrib.c",
    "attrlist.c",
    "bitmap.c",
    "bootsect.c",
    "cache.c",
    "collate.c",
    "compat.c",
    "compress.c",
    "debug.c",
    "device.c",
    "dir.c",
    "ea.c",
    "efs.c",
    "index.c",
    "inode.c",
    "ioctl.c",
    "lcnalloc.c",
    "logfile.c",
    "logging.c",
    "mft.c",
    "misc.c",
    "mst.c",
    "object_id.c",
    "realpath.c",
    "reparse.c",
    "runlist.c",
    "security.c",
    "unistr.c",
    "unix_io.c",
    "volume.c",
    "xattrs.c",
  ]
  configs = [ ":ntfs_default" ]

  subsystem_name = "storage_manager"
  part_name = "storage_standard"

}
