# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
config("ntfs_default") {
  cflags = [
    "-Wno-error",
    "-Wno-address-of-packed-member",
    "-D_LARGEFILE_SOURCE",
    "-D_FILE_OFFSET_BITS=64",
    "-DHAVE_CONFIG_H",
  ]
  include_dirs = [
    ".",
    "../include",
    "../include/fuse-lite",
    "../include/ntfs-3g",
    "..",
  ]
}

ohos_executable("mkfs.ntfs") {
  sources = [
    "attrdef.c",
    "boot.c",
    "mkntfs.c",
    "sd.c",
    "utils.c",
  ]
  configs = [ ":ntfs_default" ]
  deps = [
    "../libfuse-lite:libfuse_lite",
    "../libntfs-3g:libntfs_3g",
  ]
  
  subsystem_name = "storage_manager"
  part_name = "storage_standard"

}

ohos_executable("fsck.ntfs") {
  sources = [
    "ntfsck.c",
    "utils.c",
  ]
  configs = [ ":ntfs_default" ]
  deps = [
    "../libfuse-lite:libfuse_lite",
    "../libntfs-3g:libntfs_3g",
  ]
  
  subsystem_name = "storage_manager"
  part_name = "storage_standard"

}
ohos_executable("ntfsfix") {
  sources = [
    "ntfsfix.c",
    "utils.c",
  ]
  configs = [ ":ntfs_default" ]
  deps = [
    "../libfuse-lite:libfuse_lite",
    "../libntfs-3g:libntfs_3g",
  ]
  
  subsystem_name = "storage_manager"
  part_name = "storage_standard"
}
ohos_executable("mount.ntfs") {
  sources = [
    "../src/ntfs-3g.c",
    "../src/ntfs-3g_common.c",
  ]
  configs = [ ":ntfs_default" ]
  deps = [
    "../libfuse-lite:libfuse_lite",
    "../libntfs-3g:libntfs_3g",
  ]
  
  subsystem_name = "storage_manager"
  part_name = "storage_standard"
}
ohos_executable("ntfsresize") {
  sources = [
    "ntfsresize.c",
    "utils.c",
  ]
  configs = [ ":ntfs_default" ]
  deps = [
    "../libfuse-lite:libfuse_lite",
    "../libntfs-3g:libntfs_3g",
  ]
  
  subsystem_name = "storage_manager"
  part_name = "storage_standard"
}
